# better-shot

./: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  vitest.config.ts
bettershot-landing/components/: features.tsx  new-release-promo.tsx  testimonials.tsx
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  commands.rs  lib.rs  ocr.rs
src/components/: ImageEditor.tsx  RegionSelector.tsx  RegionSelectorWindow.tsx
src/components/editor/: BackgroundSelector.tsx  EffectsPanel.tsx
src/components/onboarding/: OnboardingFlow.tsx
src/components/preferences/: KeyboardShortcutManager.tsx
src/stores/: editorStore.test.ts  editorStore.ts
